--- a/ReadMe.org
+++ b/ReadMe.org
@@ -35,7 +35,7 @@ The /Vagrantfile/ contains the details of the system which is required.
 
 On the command line:
 
-- *git clone git remote add origin https://github.com/paulmassey42/VagrantUnifiedViews1.5.5.git"
+- *git clone https://github.com/paulmassey42/VagrantUnifiedViews1.5.5.git*
 - *cd VagrantUnifiedViews1.5.5*
 - *vagrant plugin install vagrant-vbguest*
 - *vagrant up*
